# shanten-lens

./: .gitignore  README.md  README_JA.md  build_all.bat  package-lock.json  package.json  requirements.txt  shanten-backend.spec
app/: .gitignore  index.html  msgbox.html  package-lock.json  package.json  settings.html  vite.config.ts
app/public/: splash.html
app/src/: App.css  App.tsx  main.tsx  msgbox.tsx  settings_main.tsx
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json  window-control.json
app/src-tauri/src/: lib.rs  main.rs
app/src/components/: AdvisorPanel.module.css  AdvisorPanel.tsx  AmuletBar.tsx  AmuletCard.tsx  AmuletEditorModal.tsx  AmuletPickerModal.tsx  BadgePickerModal.tsx  CandidateBar.tsx  FuseBar.tsx  GoodsBar.tsx  GoodsCard.tsx  LanguageSwitcher.tsx  Modal.module.css  Modal.tsx  ReplacementPanel.tsx  Tile.tsx  TileGrid.module.css  TileGrid.tsx  WallStats.module.css  WallStats.tsx  tile.css  useCroppedAtlasDefault.ts
app/src/fonts/: material-symbols.css
app/src/lib/: autoRunnerStore.ts  config.ts  dataRoot.ts  fuseStore.ts  gamestate.ts  i18n.ts  (+6 more)
backend/: app.py  config.py  config_models.py  msgbox.py  run_server.py  ui_runtime.py
backend/autorun/: runner.py
backend/bot/: __init__.py  chiitoi_recommender.py  config.py
backend/config/: __init__.py  items.py  manager.py  registry.py  table.py
backend/data/: registry_loader.py
backend/mitm/: __init__.py  addon.py  bridge.py  codec.py  hooks.py
backend/model/: game_state.py  items.py
proto/: liqi.json  liqi_pb2.py
scripts/: build_all.bat
(+33 files in other folders)
