[package]
name = "shanten-lens"
version = "0.1.0"
edition = "2021"

[lib]
name = "shanten_lens"
path = "src/lib.rs"

[[bin]]
name = "shanten-lens"
path = "src/main.rs"

[dependencies]
tauri = { version = "2.8.5", features = ["tray-icon", "devtools"] }
tauri-plugin-opener = "2"
tauri-plugin-log = "2"
log = "0.4"
tauri-plugin-shell = "2.3.1"
tauri-plugin-fs = "2"
tauri-plugin-os = "2.3.2"

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }
